[package]
name = "ch08"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
rand = "0.7"
reqwest = "0.9"

[dependencies.trust-dns]
version = "0.16"
default_features = false

[[bin]]
name = "rgp"
path = "src/rpg.rs"

[[bin]]
name = "stdlib"
path = "src/stdlib.rs"

[[bin]]
name = "resolve"
path = "src/resolve.rs"

[[bin]]
name = "macgen"
path = "src/macgen.rs"
